<resources>
    <string name="app_name">MusicalStructureApp</string>
    <string name="category_genres">Genres</string>
    <string name="category_playlists">Playlists</string>
    <string name="category_artists">Artists</string>
    <string name="category_albums">Albums</string>
    <string name="category_all_songs">All Songs</string>
    <string name="title_activity_numbers">NumbersActivity</string>

    <!-- All Songs' Activity -->
    <string name="triana">Abre la puerta\nTriana</string>
    <string name="alicia">Fallin\'\nAlicia Keys</string>
    <string name="armik">Alone with you\nArmik</string>
    <string name="johanes">Between Tears\nJohanes Linstead</string>
    <string name="all_songs_info">In this activity all the available songs stored in the user\'s device will be displayed. Once the user clicks a song he will be transfered to the now playing activity. MediaPlayer class can be used to implement the play music functionality.</string>

    <!-- Albums Activity -->
    <string name="adele">21\nAdele</string>
    <string name="madonna">American Life\nMadonna</string>
    <string name="enrique">Greatest Hits\nEnrique Iglesias</string>
    <string name="thalia">Thalia\nThalia</string>
    <string name="albums_info">In this activity all the albums that correspond to songs stored in the user\'s device will be displayed. Once the user clicks an album he will be transfered to an activity titled as the selected album showing which songs belong to the selected album.</string>

    <!-- Artists Activity -->
    <string name="adele_art">Adele\n3 songs</string>
    <string name="madonna_art">Madonna\n1 song</string>
    <string name="enrique_art">Enrique Iglesias\n2 songs</string>
    <string name="thalia_art">Thalia\n5 songs</string>
    <string name="artists_info">In this activity all the artists that correspond to songs stored in the user\'s device will be displayed along with their total number of songs. Once the user clicks an artist he will be transfered to an activity titled as the selected artist showing which songs correspond to the selected artist.</string>

    <!-- Genres Activity -->
    <string name="dance">Dance</string>
    <string name="flamenco">Flamenco</string>
    <string name="latin">Latin</string>
    <string name="pop">Pop</string>
    <string name="genres_info">In this activity all the genres that correspond to songs stored in the user\'s device will be displayed. Once the user clicks a genre he will be transfered to an activity titled as the selected genre showing which songs correspond to the selected genre.</string>

    <!-- Now Playing Activity -->
    <string name="display_artist_info">Artist\nSong\nAlbum</string>
    <string name="current_track_time">03.45</string>
    <string name="total_track_time">06.22</string>
</resources>
