<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearLayout"
    tools:context="com.example.android.musicalstructureapp.AllSongsActivity">

    <TextView
        style="@style/CategoryStyle"
        android:background="@color/category_first_color"
        android:drawableLeft="@drawable/allsongs"
        android:text="@string/triana" />

    <TextView
        style="@style/CategoryStyle"
        android:background="@color/category_second_color"
        android:drawableLeft="@drawable/allsongs"
        android:text="@string/alicia" />

    <TextView
        style="@style/CategoryStyle"
        android:background="@color/category_first_color"
        android:drawableLeft="@drawable/allsongs"
        android:text="@string/armik" />

    <TextView
        style="@style/CategoryStyle"
        android:background="@color/category_second_color"
        android:drawableLeft="@drawable/allsongs"
        android:text="@string/johanes" />

    <TextView
        style="@style/ActivitiesInfo"
        android:text="@string/all_songs_info"/>

</LinearLayout>