<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollView"
    tools:context="com.example.android.musicalstructureapp.GenresActivity">

    <LinearLayout style="@style/LinearLayout">

        <TextView
            style="@style/CategoryStyle"
            android:background="@color/category_first_color"
            android:drawableLeft="@drawable/genres"
            android:text="@string/dance" />

        <TextView
            style="@style/CategoryStyle"
            android:background="@color/category_second_color"
            android:drawableLeft="@drawable/genres"
            android:text="@string/flamenco" />

        <TextView
            style="@style/CategoryStyle"
            android:background="@color/category_first_color"
            android:drawableLeft="@drawable/genres"
            android:text="@string/latin" />

        <TextView
            style="@style/CategoryStyle"
            android:background="@color/category_second_color"
            android:drawableLeft="@drawable/genres"
            android:text="@string/pop" />

        <TextView
            style="@style/ActivitiesInfo"
            android:text="@string/genres_info" />

    </LinearLayout>

</ScrollView>