<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollView"
    tools:context="com.example.android.musicalstructureapp.AlbumsActivity">

    <LinearLayout style="@style/LinearLayout">

        <TextView
            style="@style/CategoryStyle"
            android:background="@color/category_first_color"
            android:drawableLeft="@drawable/adele"
            android:text="@string/adele" />

        <TextView
            style="@style/CategoryStyle"
            android:background="@color/category_second_color"
            android:drawableLeft="@drawable/madonna"
            android:text="@string/madonna" />

        <TextView
            style="@style/CategoryStyle"
            android:background="@color/category_first_color"
            android:drawableLeft="@drawable/enriqueiglesias"
            android:text="@string/enrique" />

        <TextView
            style="@style/CategoryStyle"
            android:background="@color/category_second_color"
            android:drawableLeft="@drawable/thalia"
            android:text="@string/thalia" />

        <TextView
            style="@style/ActivitiesInfo"
            android:text="@string/albums_info" />

    </LinearLayout>

</ScrollView>