<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollView"
    tools:context="com.example.android.musicalstructureapp.MainActivity">

    <LinearLayout style="@style/LinearLayout">

        <TextView
            android:id="@+id/allSongs"
            style="@style/CategoryStyle"
            android:background="@color/category_first_color"
            android:drawableLeft="@drawable/allsongs"
            android:text="@string/category_all_songs" />

        <TextView
            android:id="@+id/albums"
            style="@style/CategoryStyle"
            android:background="@color/category_second_color"
            android:drawableLeft="@drawable/albums"
            android:text="@string/category_albums" />

        <TextView
            android:id="@+id/artists"
            style="@style/CategoryStyle"
            android:background="@color/category_first_color"
            android:drawableLeft="@drawable/artists"
            android:text="@string/category_artists" />

        <TextView
            android:id="@+id/genres"
            style="@style/CategoryStyle"
            android:background="@color/category_second_color"
            android:drawableLeft="@drawable/genres"
            android:text="@string/category_genres" />

    </LinearLayout>

</ScrollView>